Removed com.ibm.lang.management.internal module access